# alx-low_level_programming

./: .gitignore  README.md
0x00-hello_world/: 0-preprocessor  100-intel  101-quote.c  101-quote.c~  4-puts.c  5-printf.c  5-printf.c~  6-size.c  6-size.c~  README.md  done  example
0x01-variables_if_else_while/: #2-print_alphabet.c#  0-positive_or_negative.c  1-last_digit.c  1-last_digit.c~  100-print_comb3.c  100-print_comb3.c~  101-print_comb4.c  101-print_comb4.c~  102-print_comb5.c  102-print_comb5.c~  2-print_alphabet.c  2-print_alphabet.c~  3-print_alphabets.c  3-print_alphabets.c~  4-print_alphabt.c  4-print_alphabt.c~  5-print_numbers.c  6-print_numberz.c~  7-print_tebahpla.c  8-print_base16.c  8-print_base16.c~  9-print_comb.c  a.out  myc.c  myc.c~  test
0x02-functions_nested_loops/: #100-times_table.c#  #2-print_alphabet_x10.c#  .#100-times_table.c  .#main.h  0-putchar.c  (+35 more)
0x13-more_singly_linked_lists/: 0-print_listint.c  1-listint_len.c  10-delete_nodeint.c  10-main.c  100-reverse_listint.c  101-main.c  101-main2.c  101-print_listint_safe.c  102-free_listint_safe.c  102-main.c  103-find_loop.c  103-find_loop_flowchart.drawio  2-add_nodeint.c  3-add_nodeint_end.c  3-main.c  4-free_listint.c  5-free_listint2.c  5-main.c  6-pop_listint.c  7-get_nodeint.c  7-main.c  8-sum_listint.c  9-insert_nodeint.c  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Untitled Diagram.drawio  _putchar.c  a.out  alx  cmake_install.cmake  d  f  free_listint_safe.drawio  h  j  k  l  lists.h  (+5 more)
0x13-more_singly_linked_lists/mainFiles/: 100-main.c  101-main.c  jojo  jojoMain.c
(+389 files in other folders)
