set(CMAKE_C_FLAGS "-Wall -Werror -Wextra -pedantic -std=gnu89")
set(CMAKE_C_STANDARD 90)
project(0x13-more_singly_linked_lists C)
add_executable(alx 9-main.c 4-free_listint.c 5-free_listint2.c 6-pop_listint.c 7-get_nodeint.c 8-sum_listint.c 9-insert_nodeint.c 3-add_nodeint_end.c 1-listint_len.c _putchar.c 2-add_nodeint.c 0-print_listint.c lists.h) 